--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div id="main">
-        <h1>Calculator</h1>
-        <input type="number" name="display" id="display" placeholder="Enter a number">
+        <h1>CALCULATOR</h1>
+        <input type="number" name="display" id="display" placeholder="enter a number">
         <div id="numberpad">
             <span id="numbers">
                 <input class="button" type="button" value="1" id="button_1">
